--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,4 @@
-pipeline {
-
-  agent any
-  stages {
+node {
     stage('Initialize'){
         steps{
         def dockerHome = tool 'docker-cli-latest'
@@ -15,11 +12,6 @@ pipeline {
       }
     }
     stage('Building image') {
-      steps{
-        script {
           sh 'docker build -t takenote:mytag .'
         }
-      }
-    }
   }
-}
