--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,5 +5,6 @@ node {
     }
     stage('Building image') {
           sh 'docker build -t takenote:mytag .'
+          sh 'docker run -p 5000:5000 takenote:mytag'
         }
   }
