--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,6 +5,6 @@ node {
     }
     stage('Building image') {
           sh 'docker build -t takenote:mytag .'
-          sh 'docker run -p 5000:5000 takenote:mytag'
+          sh 'docker run -d -p 5000:5000 takenote:mytag'
         }
   }
