--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 node {
     stage('Initialize'){
-        def dockerHome = tool 'docker-cli-latest'
+        def dockerHome = tool 'docker'
         env.PATH = "${dockerHome}/bin:${env.PATH}"
     }
     stage('Building image') {
