--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,6 +5,6 @@ node {
     }
     stage('Building image') {
           sh 'docker build --build-arg CLIENT_ID=79ccc48a450cd4e391a8 -t takenote:mytag .'
-          sh 'docker run -d -p 5000:5000 takenote:mytag'
+          sh 'docker run --rm -d -p 5000:5000 takenote:mytag'
         }
   }
